# LibrAIry

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Instructions.md  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  setup.sh
.github/workflows/: ci.yml  release.yml
data/appdata/: librairy.db  librairy.db-shm  librairy.db-wal
data/inbox/: Meeting Notes 2026.txt
docs/: backup-restore.md  backup.md  configuration.md  content-search.md  faq.md  install-docker.md  install-unraid.md  performance.md  security.md  troubleshooting.md  using-librairy.md
docs/plan/: EXECUTION-PROMPT.md  README.md  phase-1-core-engine.md  phase-10-release-acceptance.md  phase-11-tui.md  phase-12-portal-fixes.md  phase-13-theme-system.md  phase-14-screen-redesigns.md  phase-15-catalog-expansion.md  (+9 more)
scripts/: gen_env_example.py  perf_smoke.py
tests/: test_adversarial.py  test_ai_cli.py  test_ai_cloud.py  test_ai_ollama.py  test_ai_orchestrator.py  test_ai_prompt.py  test_ai_redact.py  test_ai_registry.py  test_analyze_cli.py  test_backup.py  test_boot.py  test_catalog_wiring.py  test_cli.py  test_config.py  test_container_packaging.py  test_content_extract.py  test_corpus_snapshot.py  test_czkawka.py  test_db.py  test_dedup.py  test_docs.py  test_documents.py  test_evidence.py  test_executor.py  test_grouping.py  test_hashtags.py  test_headless_e2e.py  test_health_recommendations.py  test_heuristics.py  test_history.py  test_indexer.py  test_lifecycle.py  test_locks.py  test_logging.py  test_music.py  test_openlibrary.py  test_paths.py  test_performance_smoke.py  test_planner.py  test_proposals.py  (+28 more)
(+113 files in other folders)
