[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "librairy"
version = "0.1.0"
description = "Privacy-first file organization and library manager"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.6,<1",
]

[project.scripts]
librairy = "librairy.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/librairy"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
